test_src/compiler_errors/methods/MethodCallError5.b
class MethodCallError5 {
    void test() {
        println(foo(1));
    }
}
